--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hardik Miglani - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -35,9 +38,45 @@
                         <li>Conducted market research and cost-revenue analysis to refine the pricing model for Kodo Pay transactions, optimizing profitability.</li>
                         <li>Provided cross-functional support, resulting in notable month-over-month growth: a 10% increase in product adoption, a 15% surge in transaction volume, and a 10% rise in revenue.</li>
                     </ul>
-                    <!-- Add other projects similarly -->
+                    <p><strong>Cards Solution</strong></p>
+                    <ul>
+                        <li>Established robust processes and SOPs for the co-branded Credit & PPI card program, ensuring operational excellence and customer satisfaction.</li>
+                        <li>Collaborated with card issuing partners to address stakeholder feedback promptly, ensuring a seamless customer experience.</li>
+                        <li>Achieved rapid market penetration for the new PPI card program, onboarding over 100 corporate clients within two months, highlighting solution relevance.</li>
+                        <li>Managed diverse projects, including forex rate changes for credit cards, driving a significant 9% increase in business revenue.</li>
+                        <li>Negotiated favorable card issuance terms for a new product launch, securing a 26% reduction in costs, enhancing cost efficiency.</li>
+                        <li>Closely worked with the compliance team to draft tailored onboarding documents (e.g., Application Forms, Board Resolutions) while aligning existing materials (e.g., MITC, Key Fact Statement) with regulations, ensuring seamless processes and risk mitigation.</li>
+                    </ul>
+                    <p><strong>Other Platform & Internal Tools Projects</strong></p>
+                    <ul>
+                        <li>Spearheaded the fee invoice automation project, ensuring timely delivery of corporate invoices on a fixed schedule.</li>
+                        <li>Worked on the OCR project for Kodo Pay, simplifying bill uploading by automatically populating details and initiating request creation.</li>
+                        <li>Drafted specifications and designs for the Loan Management System (LMS) for our subsidiary NBFC.</li>
+                        <li>Currently working with the team on a co-pilot for the help section and app interface.</li>
+                        <li>Led the development of workflows and project features for a notable production house enterprise client, contributing to customer retention and revenue growth.</li>
+                    </ul>
                 </div>
-                <!-- Add other jobs similarly -->
+                <div class="job">
+                    <h3>myHQ - Delhi, IN</h3>
+                    <p><strong>Community Manager</strong> | Sep 2020 - Jun 2021</p>
+                    <ul>
+                        <li>Consistently achieved a 95% Lead-to-Visit ratio within the first month of joining, demonstrating a strong ability to convert leads into actual visits and potential sales opportunities.</li>
+                        <li>Delivered exceptional results with a 25% month-on-month growth and expertly managed conversions for the Delhi, Mumbai, Faridabad, and Noida regions, maintaining a remarkable 18% conversion ratio and played a pivotal role in closing deals at coworking spaces and optimizing processes.</li>
+                        <li>Independently spearheaded the project for automating rent contract generation and management, resulting in a 30% reduction in the team's workload, thereby enabling a greater focus on strategic tasks.</li>
+                        <li>Proactively identified and capitalized on new market opportunities, resulting in a 15% increase in market share and successful expansion into untapped territories.</li>
+                        <li>Nurtured strong relationships with key clients and partners, leading to a 30% increase in customer retention and repeat business.</li>
+                        <li>Stayed abreast of industry trends and conducted competitor analysis, providing valuable insights for informed decision-making and was recognized as a top performer for consistently exceeding sales targets and delivering outstanding results.</li>
+                    </ul>
+                </div>
+                <div class="job">
+                    <h3>PolicyBazaar.ae - Gurgaon, IN</h3>
+                    <p><strong>Associate Consultant</strong> | Jun 2020 - Sep 2020</p>
+                    <ul>
+                        <li>Assisted individuals and corporates in the UAE in finding suitable health insurance plans.</li>
+                        <li>Responsibilities included understanding client requirements, suggesting plans, negotiating pricing terms, and closing contracts.</li>
+                        <li>Achieved highest number of sales among newcomers in the first month with a 20% lead to conversion ratio and attained the highest number of sales in the team in August, with deals amounting to 151,000 AED.</li>
+                    </ul>
+                </div>
             </section>
             <section id="education">
                 <h2>Education</h2>
@@ -50,17 +89,6 @@
                     <li>Master Microsoft Excel | LinkedIn | 2021</li>
                 </ul>
             </section>
-            <section id="skills">
-                <h2>Skills</h2>
-                <ul>
-                    <li>Product Roadmap Management</li>
-                    <li>Product Requirements Document</li>
-                    <li>Data Analysis</li>
-                    <li>Product Strategy</li>
-                    <li>User Research</li>
-                    <!-- Add other skills -->
-                </ul>
-            </section>
             <section id="tools">
                 <h2>Tools</h2>
                 <ul>
@@ -69,7 +97,45 @@
                     <li>Jira</li>
                     <li>SQL</li>
                     <li>Confluence</li>
-                    <!-- Add other tools -->
+                    <li>Microsoft Office Suite</li>
+                    <li>Google Suite</li>
+                    <li>Asana</li>
+                    <li>Notion</li>
+                    <li>Azure</li>
+                    <li>Metabase</li>
+                    <li>Mailmodo</li>
+                    <li>Salesforce</li>
+                    <li>AWS</li>
+                    <li>Outreach</li>
+                </ul>
+            </section>
+            <section id="skills">
+                <h2>Skills</h2>
+                <ul>
+                    <li>Product Roadmap Management</li>
+                    <li>Product Requirements Document</li>
+                    <li>Data Analysis</li>
+                    <li>Product Strategy</li>
+                    <li>User Research</li>
+                    <li>Market Analysis</li>
+                    <li>Product Lifecycle Management</li>
+                    <li>Agile Methodologies</li>
+                    <li>Wireframing</li>
+                    <li>Stakeholder Management</li>
+                    <li>Product Marketing</li>
+                    <li>Feature Prioritization</li>
+                    <li>Competitive Analysis</li>
+                    <li>Pricing Strategy</li>
+                    <li>Customer Journey Mapping</li>
+                    <li>Cross-functional Collaboration</li>
+                    <li>Scope Management</li>
+                    <li>Risk Management</li>
+                    <li>Communication Management</li>
+                    <li>Resource Allocation</li>
+                    <li>Project Planning</li>
+                    <li>Change Management</li>
+                    <li>Conflict Resolution</li>
+                    <li>Team Leadership</li>
                 </ul>
             </section>
         </div>
